Fix layout on small screens

--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 
 html, body {
   height: 100%;
+  min-height: 800px;
 }
 
 div.slides {
@@ -15,7 +16,6 @@ div.slides {
 
 div.slides > section {
   bottom: 0px;
-  height: 800px;
   left: 0;
   margin: auto;
   opacity: 0;
